20050305 widget/widget.c: 'round' widget corners (patch #1150690)
	 (Darren).
20050305 z80/z80.c: get interrupt length (closer) to correct (thanks,
	 Woody, Jon Needle and Ramsoft).
20050305 configure.in,lib/{Makefile.am,disk_plus3.[szx|z80],tape_128.[szx|z80],
         tape_16.[szx|z80], tape_2048.[szx|z80], tape_2068.[szx|z80],
         tape_48.[szx|z80], tape_pentagon.[szx|z80], tape_plus2.[szx|z80],
         tape_plus2a.[szx|z80], tape_plus3.[szx|z80], tape_scorpion.[szx|z80]},
         lib/[un]compressed/{disk_plus3.[szx|z80],tape_128.[szx|z80],
         tape_16.[szx|z80], tape_2048.[szx|z80], tape_2068.[szx|z80],
         tape_48.[szx|z80], tape_pentagon.[szx|z80], tape_plus2.[szx|z80],
         tape_plus2a.[szx|z80], tape_plus3.[szx|z80], tape_scorpion.[szx|z80]}:
         Make configure choose compressed or uncompressed auto-load snapshots
         based on libspectrum support for the feature (Fred).
20050306 configure.in: Annoyingly missed path from link invocation (Fred).
20050314 display.c: don't extend y past the end of the screen to avoid array
         overruns (Fred).
20050321 widget/{filesel.c,menu.c,roms.c,widget_internals_h}: add title to
	 fileselector widget (half of patch #1150689) (Darren).
20050321 widget/{filesel.c,widget.c,widget_internals.h}: add arrows to
	 show when the fileselector is scrollable (other half of patch
	 #1150689) (Darren).
20050321 settings.dat,ui/options.dat,widget/{filesel.c,menu.c,options.pl,
	 text.c,widget.[ch],widget_internals.h}: add selectable filenames
	 when saving via the widget UI (patch #1150692) (Darren).
20050321 machine.c,memory.c,machines/{scorpion.c,spec128.c,spec16.c,spec48.c,
	 spec_se.c,specplus3.c},pokefinder/{pokefinder.[ch]},ui/ui.h,
	 ui/gtk/{gtkinternals.h,gtkui.c,pokefinder.c},widget/widget.c:
	 various pokefinder improvements (patch #1150701) (Darren).
20050325 menu.[ch],menu_data.c,profile.c,ui.c,ui/ui.h,ui/gtk/gtkui.c,
	 widget/widget.c: improve profiler UI.