@@ -46,6 +46,7 @@
 #include "keyboard.h"
 #include "options.h"
 #include "periph.h"
+#include "pokefinder/pokefinder.h"
 #include "screenshot.h"
 #include "timer.h"
 #include "utils.h"
@@ -441,6 +442,7 @@ widget_t widget_data[] = {
   { widget_browse_draw,   widget_browse_finish,  widget_browse_keyhandler   },
   { widget_text_draw,	  widget_text_finish,	 widget_text_keyhandler     },
   { widget_debugger_draw, NULL,			 widget_debugger_keyhandler },
+  { widget_pokefinder_draw, NULL,		 widget_pokefinder_keyhandler },
   { widget_roms_draw,     widget_roms_finish,	 widget_roms_keyhandler     },
   { widget_peripherals_draw, widget_options_finish,
 			                      widget_peripherals_keyhandler },
@@ -518,6 +520,7 @@ ui_confirm_joystick( libspectrum_joystick libspectrum_type, int inputs )
 int
 ui_widgets_reset( void )
 {
+  pokefinder_clear();
   return 0;
 }
 
